<resources>
    <string name="app_name">Polytechnic Shiksha</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_lab_manuals">lab_manuals</string>
    <string name="title_activity_electure">electure</string>
    <string name="title_activity_mcq">mcq</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_qpsolution">qpsolution</string>
    <string name="important_link">Important Departmental Websites</string>
    <string name="title_activity_imp_link">imp_link</string>
    <string name="_1_higher_technical_and_medical_education_government_of_rajasthan">1. Higher Technical and Medical Education, Government of Rajasthan</string>
    <string name="dte">2. Department of Technical Education, Government of Rajasthan</string>
    <string name="bter">3. Board of Technical Education, Government of Rajasthan</string>
    <string name="ttc">4. Teachers Training Center and Learning Resource Development Center, Government of Rajasthan</string>
    <string name="syllabus">Syllabus</string>
    <string name="title_activity_syllabus">syllabus</string>
    <string name="sem_scheme">1. Semester Scheme Syllabus. Click to visit this link</string>
    <string name="yearly_scheme">2. Yearly Scheme Sylllabus. Click to visit this link</string>
    <string name="exit">Exit</string>
    <string name="MCQs">MCQs</string>
    <string name="title_activity_contact_us">contact_us</string>
    <string name="title_activity_disclaimer">disclaimer</string>
    <string name="CS_302">![CDATA[CS 302 Object Oriented Programming Through C++]]</string>
    <string name="ttc_contact"><![CDATA[Teachers Training Center and Learning Resource Development Center (TTC & LRDC), Hostel No 3 and 4, Government Polytechnic College campus, Residency Road, Jodhpur, Rajasthan 342001]]></string>
    <string name="title_activity_feedback">feedback</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="solution_of_old_question_papers">Solution of Old Question Papers</string>
    <string name="e_notes">E-Notes</string>
    <string name="mcqs">MULTIPLE CHOICE QUESTIONS</string>
    <string name="lab_manuals">Lab Manuals</string>
    <string name="e_lecture">E-LECTURES</string>
    <string name="ttc_and_lrdc_welcomes_you">TTC AND LRDC WELCOMES YOU</string>
    <string name="contact_us">Contact Us</string>
    <string name="app_lrdc_gmail_com">app.lrdc@gmail.com</string>
    <string name="phone_number">0291-2431072</string>
    <string name="mail_icon">mail icon</string>
    <string name="call_icon">call icon</string>
    <string name="rajasthan_polytechnic_shiksha_english">Rajasthan Polytechnic Shiksha</string>
    <string name="rajasthan_polytechnic_shiksha_hindi">राजस्थान पॉलिटेक्निक शिक्षा</string>
    <string name="dte_initiative">A DTE Initiative</string>
    <string name="government_of_rajasthan">Government of Rajasthan</string>
    <string name="todo">TODO</string>
    <string name="go">Go</string>
    <string name="link_click_request">Click on respective link to open it...</string>
    <string name="feedback_and_suggestion">Feedback and Suggestion</string>
    <string name="polytechnic_shiksha_legal">Polytechnic Shiksha Legal</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_registration">New Registration</string>
    <string name="heading_login">Login for Training and Placement Officers</string>
    <string name="placement">Placement, Apprenticeship and Training</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="title_activity_t_p_o_college">TPO_college</string>
    <string name="title_activity_preview_tpo">preview_tpo</string>
    <string name="title_activity_dashboard__college">Dashboard_College</string>
    <string name="title_activity_campus_placement">campus_placement</string>
    <string name="process_ppt"><![CDATA[PPT Presentation and Q&A]]></string>
    <string name="title_activity_enotes">enotes</string>
</resources>